// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`gridRowStart renders 0 1`] = `
Array [
  .c0 {
  grid-row-start: 0;
}

<div
    className="c0"
  />,
  .c0 {
  grid-row-start: 0;
}

<div
    className="c0"
  />,
  .c0 {
  grid-row-start: 0;
}

<div
    className="c0"
  />,
  .c0 {
  grid-row-start: 0;
}

<div
    className="c0"
  />,
]
`;

exports[`gridRowStart renders function 1`] = `
Array [
  .c0 {
  grid-row-start: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  grid-row-start: has;
}

<div
    className="c0"
  />,
  .c0 {
  grid-row-start: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  grid-row-start: has;
}

<div
    className="c0"
  />,
]
`;

exports[`gridRowStart renders invalid theme path 1`] = `
Array [
  .c0 {
  grid-row-start: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  grid-row-start: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  grid-row-start: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  grid-row-start: invalid.path.1;
}

<div
    className="c0"
  />,
]
`;

exports[`gridRowStart renders negative number 1`] = `
Array [
  .c0 {
  grid-row-start: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  grid-row-start: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  grid-row-start: -42365;
}

<div
    className="c0"
  />,
  .c0 {
  grid-row-start: -42365;
}

<div
    className="c0"
  />,
]
`;

exports[`gridRowStart renders object [breakpoints] 1`] = `
Array [
  @media screen and (min-width:November) {
  .c0 {
    grid-row-start: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    grid-row-start: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    grid-row-start: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    grid-row-start: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {
  .c0 {
    grid-row-start: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    grid-row-start: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    grid-row-start: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    grid-row-start: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    grid-row-start: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    grid-row-start: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    grid-row-start: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    grid-row-start: November;
  }
}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    grid-row-start: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    grid-row-start: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    grid-row-start: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    grid-row-start: November;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`gridRowStart renders object [breakpoints] 2`] = `
Array [
  @media May {
  .c0 {
    grid-row-start: July;
  }
}

@media April {
  .c0 {
    grid-row-start: August;
  }
}

@media January {
  .c0 {
    grid-row-start: September;
  }
}

@media April {
  .c0 {
    grid-row-start: November;
  }
}

@media June {
  .c0 {
    grid-row-start: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {
  .c0 {
    grid-row-start: July;
  }
}

@media April {
  .c0 {
    grid-row-start: August;
  }
}

@media January {
  .c0 {
    grid-row-start: September;
  }
}

@media April {
  .c0 {
    grid-row-start: November;
  }
}

@media June {
  .c0 {
    grid-row-start: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    grid-row-start: January;
  }
}

@media April {
  .c0 {
    grid-row-start: December;
  }
}

@media January {
  .c0 {
    grid-row-start: April;
  }
}

@media April {
  .c0 {
    grid-row-start: May;
  }
}

@media June {
  .c0 {
    grid-row-start: June;
  }
}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    grid-row-start: January;
  }
}

@media April {
  .c0 {
    grid-row-start: December;
  }
}

@media January {
  .c0 {
    grid-row-start: April;
  }
}

@media April {
  .c0 {
    grid-row-start: May;
  }
}

@media June {
  .c0 {
    grid-row-start: June;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`gridRowStart renders postitive number 1`] = `
Array [
  .c0 {
  grid-row-start: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  grid-row-start: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  grid-row-start: 42365;
}

<div
    className="c0"
  />,
  .c0 {
  grid-row-start: 42365;
}

<div
    className="c0"
  />,
]
`;

exports[`gridRowStart renders string 1`] = `
Array [
  .c0 {
  grid-row-start: July;
}

<div
    className="c0"
  />,
  .c0 {
  grid-row-start: July;
}

<div
    className="c0"
  />,
  .c0 {
  grid-row-start: June;
}

<div
    className="c0"
  />,
  .c0 {
  grid-row-start: June;
}

<div
    className="c0"
  />,
]
`;

exports[`gridRowStart renders valid theme path 1`] = `
Array [
  .c0 {
  grid-row-start: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  grid-row-start: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  grid-row-start: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  grid-row-start: DarkSlateBlue;
}

<div
    className="c0"
  />,
]
`;
